--- a/view/frontend/templates/component/image_teaser/slide_elements/description.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/description.phtml
@@ -4,5 +4,5 @@ $slide = $block->getSlide();
 $description = $slide->getDescription();
 ?>
 <?php if ($description): ?>
-    <p class="cs-image-teaser__description"><?= $description ?></p>
+    <div class="cs-image-teaser__description"><?= $description ?></div>
 <?php endif; ?>
