--- a/view/frontend/templates/component/image_teaser/slide_elements/slogan.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/slogan.phtml
@@ -4,5 +4,5 @@ $slide = $block->getSlide();
 $slogan = $slide->getSlogan();
 ?>
 <?php if ($slogan): ?>
-    <p class="cs-image-teaser__slogan"><?= $slogan ?></p>
+    <div class="cs-image-teaser__slogan"><?= $slogan ?></div>
 <?php endif; ?>
