feat: [NKD-3428] Add possibility to pass mix values into product carousel component

--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -9,7 +9,10 @@ $visibility = $block->getVisibilityClass();
 $useWholeScreen = $block->getVar('product_carousel/use_whole_screen') == 'true';
 $viewMode = $block->getData('view_mode') ?? 'grid';
 
-$componentClasses = $block->getSkipSpacing() ? ' cs-products-carousel--skip-spacing' : '';
+$componentClasses = $block->getMix();
+if ($block->getSkipSpacing()) {
+    $componentClasses .= ' cs-products-carousel--skip-spacing';
+}
 $componentClasses .= ' ' . $block->getVar('product_carousel/additional_css_classes');
 
 $containerClasses = $block->getContainerMix();
