chore: fix tag closing in accordion.phtml

--- a/view/frontend/templates/component/accordion.phtml
+++ b/view/frontend/templates/component/accordion.phtml
@@ -62,7 +62,7 @@ $headlineTag = $block->getVar('accordion/headline_tag') ?: 'div';
                                                         ->toHtml();
                                                 ?>
                                                 <?php endif; ?>
-                                            <span>
+                                            </span>
                                         </<?= $headlineTag ?>>
                                         <div class="cs-accordion__item-content" data-role="content">
                                             <?= $viewModel->renderWysiwygContent($item['content']); ?>
