feat: [MGS-5019] Add loading options for slide images in teaser based CC components

--- a/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
+++ b/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
@@ -52,6 +52,8 @@ $ctaOnly = (!!$ctaHref && !!$ctaLabel && !$slogan && !$description);
  * Advanced
  */
 $fetchPriority = $slideImage['fetch_priority'] ?? null;
+$lazyLoad = $slideImage['lazyload'] ?? null;
+$eagerLoad = $slideImage['eagerload'] ?? null;
 $openLinkInNewTab = ($block->getOpenLinkInNewTab() || $ctaTarget) ? true : false;
 $trackingId = $slide->getTrackingId();
 $trackingData = "data-tracking-id='{$trackingId}'";
@@ -73,12 +75,6 @@ if ($hasVideoTeaser) {
     $slideClasses .= ' cs-image-teaser__slide--has-video-teaser';
 }
 $slideClasses .= ' '.$slide->getCcCssClasses();
-
-/**
- * Hero first image / LCP detection
- */
-$isFirstImage = $block->getIsFirstImage();
-$eagerLoadFirstImage = $block->getEagerLoadFirstImage();
 ?>
 <li class="<?= $slideClasses ?>"
     <?php if (!$ctaHref && !empty($trackingId)): ?>
@@ -117,9 +113,9 @@ $eagerLoadFirstImage = $block->getEagerLoadFirstImage();
             ->setIsSliderMobile($isSliderMobile)
             ->setSlideIndex($slideIndex)
             ->setAspectRatio($aspectRatio)
-            ->setIsFirstImage($isFirstImage)
-            ->setEagerLoadFirstImage($eagerLoadFirstImage)
             ->setFetchPriority($fetchPriority)
+            ->setLazyLoad($lazyLoad)
+            ->setEagerLoad($eagerLoad)
             ->toHtml();
         ?>
 
