fix: [MGS-5019] Set default value of lazyload and eagerload for existing components

--- a/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
+++ b/view/frontend/templates/component/image_teaser/image_teaser_slide.phtml
@@ -51,9 +51,9 @@ $ctaOnly = (!!$ctaHref && !!$ctaLabel && !$slogan && !$description);
 /**
  * Advanced
  */
-$fetchPriority = $slideImage['fetch_priority'] ?? null;
-$lazyLoad = $slideImage['lazyload'] ?? null;
-$eagerLoad = $slideImage['eagerload'] ?? null;
+$fetchPriority = $slideImage['fetch_priority'] ?? false;
+$lazyLoad = $slideImage['lazyload'] ?? true;
+$eagerLoad = $slideImage['eagerload'] ?? false;
 $openLinkInNewTab = ($block->getOpenLinkInNewTab() || $ctaTarget) ? true : false;
 $trackingId = $slide->getTrackingId();
 $trackingData = "data-tracking-id='{$trackingId}'";
