--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -9,6 +9,7 @@ $imageTeaser = $block->getData();
 $slides = $viewModel->getSlides();
 
 $componentType = $block->getComponentType() ?? 'image_teaser';
+$deferCSS = $block->getDeferCSS() ?? false;
 
 $desktopLayout = $imageTeaser['scenario']['desktopLayout']['id'];
 $mobileLayout = $imageTeaser['scenario']['mobileLayout']['id'];
@@ -114,7 +115,7 @@ if ($gridTeaser) {
 $openLinkInNewTab = $block->getOpenLinkInNewTab() ? true : false;
 ?>
 
-<?= $block->getCssOnce('css/image-teaser.css'); ?>
+<?= $block->getCssOnce('css/image-teaser.css', $deferCSS); ?>
 
 <?php if ($gridTeaser): ?>
 <li class="<?= $teaserBrickClass ?>" id="<?= $teaserId ?>">
