--- a/view/frontend/templates/component/paragraph.phtml
+++ b/view/frontend/templates/component/paragraph.phtml
@@ -13,9 +13,13 @@ $containerClasses = $block->getContainerMix();
 if (isset($componentConfiguration['cc_css_classes'])):
     $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
 endif;
+
+$includeStylesInComponent = $block->getVar('paragraph/include_styles_in_component');
 ?>
 
-<?= $block->getCssOnce('css/paragraph.css'); ?>
+<?php if ($includeStylesInComponent): ?>
+    <?= $block->getCssOnce('css/paragraph.css'); ?>
+<?php endif; ?>
 
 <div class="cs-container cs-container--paragraph<?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
     <div class="cs-container__inner">
