--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -19,9 +19,13 @@ $containerClasses = $block->getContainerMix();
 if (isset($componentConfiguration['cc_css_classes'])):
     $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
 endif;
+
+$includeStylesInComponent = $block->getVar('category_links/include_styles_in_component');
 ?>
 
-<?= $block->getCssOnce('css/category-links.css'); ?>
+<?php if ($includeStylesInComponent): ?>
+    <?= $block->getCssOnce('css/category-links.css'); ?>
+<?php endif; ?>
 
 <div class="cs-container cs-container--category-links<?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
     <div class="cs-container__inner">
