--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -17,9 +17,13 @@ $containerClasses = $block->getContainerMix();
 if (isset($componentConfiguration['cc_css_classes'])):
     $containerClasses .= ' ' . $componentConfiguration['cc_css_classes'];
 endif;
+
+$includeStylesInComponent = $block->getVar('product_finder/include_styles_in_component');
 ?>
 
-<?= $block->getCssOnce('css/product-finder.css'); ?>
+<?php if ($includeStylesInComponent): ?>
+    <?= $block->getCssOnce('css/product-finder.css'); ?>
+<?php endif; ?>
 
 <div class="cs-container cs-container--product-finder<?= $containerClasses ?><?= $visibility ? ' ' .$visibility : ''; ?>">
     <div class="cs-container__inner">
