Propagating daily deal data to the button to avoid loading the whole catalog during rendering

--- a/view/frontend/templates/component/daily_deal_teaser/cta.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser/cta.phtml
@@ -18,6 +18,7 @@ $product = $viewModel->getProduct();
                 <?= $this->getLayout()
                     ->createBlock(\MageSuite\ContentConstructorFrontend\Block\Component\DailyDealTeaser::class)
                     ->setTemplate('MageSuite_ContentConstructorFrontend::component/daily_deal_teaser/button.phtml')
+                    ->setData($block->getData())
                     ->toHtml();
                 ?>
         </form>
