fix(product-teaser): Add wrapper for description content, do not render empty description content

--- a/view/frontend/templates/tile/tile-teaser/description.phtml
+++ b/view/frontend/templates/tile/tile-teaser/description.phtml
@@ -1,8 +1,13 @@
 <?php
     $specialDescription = $block->getTile()->getSpecialDescription();
+    $shortDescription = $block->getProduct()->getShortDescription();
 ?>
-<?php if ($specialDescription): ?>
-    <?= $specialDescription ?>
-<?php else: ?>
-    <?= $block->getProduct()->getShortDescription() ?>
+<?php if ($specialDescription || $shortDescription): ?>
+<div class="cs-product-tile__description-content">
+    <?php if ($specialDescription): ?>
+        <?= /* @noEscape */ $specialDescription; ?>
+    <?php else: ?>
+        <?= /* @noEscape */ $shortDescription; ?>
+    <?php endif; ?>
+</div>
 <?php endif; ?>
